# bdor

./: AGENTS.md  README.md  build.sh  pyproject.toml  requirements.txt  vercel.json
.opencode/commands/: summarize.md
api/: middleware.py  models.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_player_and_more.py  0003_remove_player_stats_player_appearances_and_more.py  0008_player_is_eligible.py
api/selectors/: stats_selectors.py
api/services/: data_normalization_service.py  external_stats_service.py  player_ranking_service.py  ranking_snapshot_service.py
balon_dor/: settings.py  urls.py
core/: urls.py  views.py
core/stats/: leagues_sample_data.json
docs/: DATABASE_TABLES.md  QUICK_REFERENCE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  FAQs.tsx  Rankings.tsx  index.css  main.tsx
frontend/src/components/ui/: combobox.tsx  input.tsx  navigation-menu.tsx  sheet.tsx
frontend/src/layouts/: MainLayout.tsx
utils/: stats.py
