[project]
name = "balon-dor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "asgiref==3.11.0",
    "billiard==4.2.4",
    "celery==5.6.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cloudscraper==1.2.71",
    "colorama==0.4.6",
    "django==5.2.8",
    "django-crontab==0.7.1",
    "djangorestframework==3.16.1",
    "exceptiongroup==1.3.1",
    "greenlet==3.2.4",
    "gunicorn==25.1.0",
    "idna==3.11",
    "kombu==5.6.1",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "playwright==1.56.0",
    "prompt-toolkit==3.0.52",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pyee==13.0.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "redis==7.1.0",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sqlparse==0.5.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "vine==5.1.0",
    "wcwidth==0.2.14",
    "whitenoise==6.12.0",
]
