[project]
name = "bdor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudscraper>=1.2.71",
    "django>=6.0.3",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.1.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.3.0",
    "whitenoise>=6.12.0",
]
